bk_ida/gccida/g0/oprs_not_set_p
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/oprs_not_set_p/src/gcse.c:3280:15: error: use of undeclared identifier 'uid_cuid_1'
*( ( _DWORD *)uid_cuid_1 + insn->fld[0].rtint), 
              ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/oprs_not_set_p/src/obj/gcse.o] Error 1
